objects/SVMXC__PM_Plan__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Preventive Maintenance Plans for various customer contracts and automatically initiating execution of such maintenance plans using work orders.</description>
    <fields>
        <fullName>CurrentDate__c</fullName>
        <label>Current Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEF_Company__c</fullName>
        <label>DEF Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DEF_NumberOfWorkOrder__c</fullName>
        <label>Number Of Work Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DesignationYear__c</fullName>
        <description>Anniversary year of the PM Plan.</description>
        <formula>if(CurrentDate__c &gt;= SVMXC__Start_Date__c,
TEXT(YEAR(CurrentDate__c - PM_Delta_Start_of_Year__c)),
TEXT(YEAR(SVMXC__Start_Date__c))
)</formula>
        <label>Designation Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextAnniversaryDate__c</fullName>
        <formula>DATE(
YEAR (SVMXC__Start_Date__c) + (FLOOR((CurrentDate__c - SVMXC__Start_Date__c) / 365) + 1),
MONTH(SVMXC__Start_Date__c),
IF(AND(DAY(SVMXC__Start_Date__c) = 29,MONTH(SVMXC__Start_Date__c) = 02) , 28, DAY(SVMXC__Start_Date__c)))</formula>
        <label>Next Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note_to_Planner__c</fullName>
        <label>Note to Planner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PM_Delta_Start_of_Year__c</fullName>
        <description>Number of days between the first day of the year and the start date of the maintenance plan.</description>
        <formula>ABS(PmStartOfYear__c - SVMXC__Start_Date__c)</formula>
        <inlineHelpText>Number of days between the first day of the year and the start date of the maintenance plan.</inlineHelpText>
        <label>PM - Delta Start of Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PmStartOfYear__c</fullName>
        <description>First day of the year.
Based on the Start Date of the PM plan e.g. if PM start Date is 2020-06-01, then the value would be 2020-01-01</description>
        <formula>DATE(
YEAR (SVMXC__Start_Date__c),
1,
1)</formula>
        <inlineHelpText>First day of the year.
Based on the Start Date of the PM plan.</inlineHelpText>
        <label>PM Start of Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Preventive Maintenance Plans</relationshipLabel>
        <relationshipName>Preventive_Maintenance_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Activation_Notes__c</fullName>
        <description>Preventive Maintenance Plan  Activation Notes</description>
        <inlineHelpText>Preventive Maintenance Plan  Activation Notes</inlineHelpText>
        <label>Activation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Activity_On_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Create an activity in PM Plan if Error occur in Execution</description>
        <label>Create Activity on Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Activity_On_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Create an activity in PM Plan upon successful execution</description>
        <label>Create Activity on Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Cancelation_Notes__c</fullName>
        <description>Service/Maintenance Contract Cancelation Notes</description>
        <inlineHelpText>Service/Maintenance Contract Cancelation Notes</inlineHelpText>
        <label>Cancelation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Salesforce user that canceled this Preventive Maintenance Plan</description>
        <inlineHelpText>Name of the Salesforce user that canceled this Preventive Maintenance Plan</inlineHelpText>
        <label>Canceled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Preventive_Maintenance_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_On__c</fullName>
        <description>Date/time on which this service contract was canceled</description>
        <inlineHelpText>Date/time on which this service contract was canceled</inlineHelpText>
        <label>Canceled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case_Assign_To_Queue__c</fullName>
        <description>Name of the Salesforce queue to assign the PM Case to</description>
        <label>Case Assign To Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case_Assign_To_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Salesforce user to assign the PM Case to</description>
        <label>Case Assign To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PM_Plan_Case_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case_Assign_To__c</fullName>
        <description>Indicates if the PM case should be assigned to a user or queue</description>
        <label>Case Assign To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account (Visit Only)</fullName>
                </value>
                <value>
                    <fullName>Product (Must Have IB)</fullName>
                </value>
                <value>
                    <fullName>Location (Must Have Location)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Create_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Cases should be created with PM work orders</description>
        <label>Create Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Create_Parts_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Parts Requests should be automatically created when creating PM work orders</description>
        <label>Create Parts Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Create_Work_Order__c</fullName>
        <description>Indicates how many days in advance work orders will be created for this PM plan</description>
        <label>Create Work Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Description__c</fullName>
        <description>Detailed description of the preventive maintenance plan</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dispatch process to route the preventive maintenance plan to</description>
        <label>Dispatch Process</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipName>PM_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Date__c</fullName>
        <description>End Date for the preventive maintenance plan</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Error_Email_ID__c</fullName>
        <description>Email ID to receive Error Notifications</description>
        <label>Error Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__Field_map_for_Case__c</fullName>
        <description>Field Mapping Id for creating the case</description>
        <label>Field map to use to create Case</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Field_map_for_wo__c</fullName>
        <description>Field mapping id for creating Work Order</description>
        <label>Field map to use to create Work Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Frequency_Unit__c</fullName>
        <description>Unit of measure for frequency</description>
        <label>Frequency Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                    <default>true</default>
                    <label>Days</label>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>SVMXC__All_Preventive_Plans</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Account__c</columns>
        <columns>SVMXC__Service_Contract__c</columns>
        <columns>SVMXC__Start_Date__c</columns>
        <columns>SVMXC__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Preventive Plans</label>
        <language>en_US</language>
    </listViews>
    <fields>
        <fullName>SVMXC__Frequency__c</fullName>
        <description>Frequency to run the preventive maintenance plan if based on dates</description>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Last_PM_Date__c</fullName>
        <description>Date on which the preventive maintenance plan was last run</description>
        <label>Last PM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Preventive Maintenance Plans</relationshipLabel>
        <relationshipName>Preventive_Maintenance_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Next_PM_Date__c</fullName>
        <description>Date on which the preventive maintenance plan will be run next</description>
        <label>Next PM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Number_of_Cases__c</fullName>
        <description>Indicates how Cases will be created for a preventive maintenance plan: One per work order or one per plan</description>
        <label>Number of Cases</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Per Work Order</fullName>
                    <default>true</default>
                    <label>One Per Work Order</label>
                </value>
                <value>
                    <fullName>One Per Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Number_of_Failures__c</fullName>
        <description>Number of failures encountered when executing the PM plan. Updated automatically</description>
        <label>Number of Failures</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Number_of_Work_orders__c</fullName>
        <description>Indicates how Work Orders will be created for a preventive maintenance plan: One per installed product or one per plan</description>
        <label>Number of Work orders</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Per Product</fullName>
                    <default>true</default>
                    <label>One Per Product</label>
                </value>
                <value>
                    <fullName>One Per Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__PM_Plan_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Plan Template</label>
        <referenceTo>SVMXC__PM_Plan_Template__c</referenceTo>
        <relationshipLabel>Preventive Maintenance Plans</relationshipLabel>
        <relationshipName>Preventive_Maintenance_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if the PM plan has been processed successfully during a run</description>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SLA Terms to use when creating Case and work orders as per the PM plan.</description>
        <label>SLA Terms</label>
        <referenceTo>SVMXC__Service_Level__c</referenceTo>
        <relationshipName>PM_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Activity_Date_To_Consider__c</fullName>
        <description>This field will be applicable only if the PM plan is configured with one per product. It defines whether activity of first or last work order to be considered for next scheduled date calculation.</description>
        <label>Activity Work Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Activity</fullName>
                </value>
                <value>
                    <fullName>Last Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Adjustment_Activity_Date__c</fullName>
        <description>This field indicates the date field on Work Order which will be considered as completion date.</description>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SVMXC__Completed_Date_Time__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Actual_Initial_Response__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Actual_Onsite_Response__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Actual_Resolution__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Actual_Restoration__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Canceled_Date_Time__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Closed_On__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Acknowledged_By_Technician_Date_Time__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Finished_Onsite_Date_Time__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__First_Assigned_DateTime__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__First_Queued_DateTime__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__FirstScheduledDateTime__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Initial_Response_Customer_By__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Initial_Response_Internal_By__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Onsite_Response_Customer_By__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Onsite_Response_Internal_By__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__OptiMax_Last_Run_Time__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__SM_Optimizer_Message_Creation_Date_Time__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Preferred_End_Time__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Preferred_Start_Time__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Previous_Scheduled_Date_Time__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Resolution_Customer_By__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Resolution_Internal_By__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Restoration_Customer_By__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Restoration_Internal_By__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Scheduled_Date_Time__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__SLA_Clock_Pause_Restart_Time__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__SLA_Clock_Pause_Time__c</fullName>
                </value>
                <value>
                    <fullName>SVMXC__Started_Driving_To_Location_Date_Time__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Adjustment_Max__c</fullName>
        <description>This field is to indicate a date difference larger than this value will use the maximum allowed difference. The max value cannot exceed the frequency of recurrence. For example, if the frequency is every 2 months, this value has to be 60 days or less. If this value is blank, frequency of recurrence is implied</description>
        <label>Max Activity Changed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Adjustment_Min__c</fullName>
        <description>This field is to indicate a date difference smaller than this value will be ignored and the next Schedule On date is not affected. For example, if this value is 14, the next Scheduled On date is not affected if the Activity Date is less than 14 days after the Preferred Start date of the WO</description>
        <label>Min Activity Changed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Adjustment_Type__c</fullName>
        <description>This field is to indicate the adjustment type.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Adjustment_Unit__c</fullName>
        <description>This field indicates the frequency unit of adjustment</description>
        <label>Adjusted Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Adjustment_Value__c</fullName>
        <description>This field is only used if adjustment type is Fixed,this value in multiple of adjustment unit is added to the Scheduled On date as long as the Activity Date exceeds the minimum value of adjustment range; max adjustment value does not apply.</description>
        <label>Adjusted Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Advanced_Expression__c</fullName>
        <label>Advanced Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Condition_Type__c</fullName>
        <label>Condition Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Dynamic_Time_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the Time based PM is enabled for the plan</description>
        <label>Dynamic Time Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Schedule_Type__c</fullName>
        <description>Indicates how the PM plan is scheduled: Using Counters, Using Dates or Using Both</description>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Time Based</fullName>
                    <default>true</default>
                    <label>Time Based</label>
                </value>
                <value>
                    <fullName>Counter Based</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Counters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used in ServiceMax screens to manage record selection</description>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Service/Maintenance Contract</description>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipName>PM_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Start_Date__c</fullName>
        <description>Start date for the preventive maintenance plan</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Status__c</fullName>
        <description>Current status of the PM plan</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Success_Email_ID__c</fullName>
        <description>Email ID to receive Success Notification</description>
        <label>Success Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__Task_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the task template to use for the PM work orders. Reference to an existing Task Template in ServiceMax</description>
        <label>Task Template</label>
        <referenceTo>SVMXC__Task_Template__c</referenceTo>
        <relationshipName>PM_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_and_Counters__c</fullName>
        <description>Indicates the tie-breaking rule between validity dates and counters for a product.</description>
        <label>Time &amp; Counters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Which Ever Comes First</fullName>
                    <default>true</default>
                    <label>Which Ever Comes First</label>
                </value>
                <value>
                    <fullName>Which Ever Comes Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Order_Assign_To_Queue__c</fullName>
        <description>Name of the Salesforce queue to assign the PM work order to</description>
        <label>Work Order Assign To Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Order_Assign_To_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Salesforce user to assign the PM work order to</description>
        <label>Work Order Assign To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PM_Plan_WO_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Order_Assign_To__c</fullName>
        <description>Indicates if the PM work order should be assigned to a user or queue</description>
        <label>Work Order Assign To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Primary Technician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Order_Date__c</fullName>
        <description>Date on which next work orders will be created for this PM plan. Calculated based on Next PM Date and number of work order days</description>
        <label>Work Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Number_of_PM_s__c</fullName>
        <label>Number of PM s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Preventive Maintenance Plan</label>
    <listViews>
        <fullName>SVMXC__All_Preventive_Plans</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Account__c</columns>
        <columns>SVMXC__Service_Contract__c</columns>
        <columns>SVMXC__Start_Date__c</columns>
        <columns>SVMXC__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Preventive Plans</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PM Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preventive Maintenance Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SVMXC__PM_Plan_Start_End_Date_Validation</fullName>
        <active>true</active>
        <description>Start date of preventive maintenance plan cannot be less than end time.</description>
        <errorConditionFormula>IF( SVMXC__Start_Date__c &gt;  SVMXC__End_Date__c, true, false)</errorConditionFormula>
        <errorMessage>End date should be greater than start date of Preventive Maintenance Plan</errorMessage>
    </validationRules>
</CustomObject>